fix h3 alignment

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body p, h1{
+body p, h1, h3{
   max-width:800px;
   text-indent: 50px;
   margin-left: 50px;
